--- a/index.html
+++ b/index.html
@@ -521,10 +521,10 @@
             <a href="#contact" class="cta-button">Let's Collaborate</a>
             
             <div class="social-links">
-                <a href="https://linkedin.com/in/karthik-tavatari" class="social-link" title="LinkedIn">💼</a>
+                <a href="https://www.linkedin.com/in/karthiktavatari" class="social-link" title="LinkedIn">💼</a>
                 <a href="https://github.com/tkarthik123" class="social-link" title="GitHub">🐱</a>
                 <a href="mailto:Tavatarikarthik036@gmail.com" class="social-link" title="Email">📧</a>
-                <a href="tel:+919364129490" class="social-link" title="Phone">📞</a>
+                <a href="tel:+919346129490" class="social-link" title="Phone">📞</a>
             </div>
         </div>
     </section>
