--- a/index.html
+++ b/index.html
@@ -885,9 +885,9 @@
                 <p style="color: var(--text-secondary); margin-bottom: 20px;">
                     📧 tavatarikarthik035@gmail.com | 📱 +91- 9346129490 | 📍 Banglore, IN
                 </p>
-                <a href="/T_Karthik_Resume.pdf" class="cta-button" style="background: var(--gradient-accent);">
+                <a href="/T_Karthik_Resume.pdf" download class="cta-button" style="background: var(--gradient-accent);">
                     📄 Download Resume
-                </a>
+                </a
             </div>
         </div>
     </section>
