--- a/index.html
+++ b/index.html
@@ -885,9 +885,9 @@
                 <p style="color: var(--text-secondary); margin-bottom: 20px;">
                     📧 tavatarikarthik035@gmail.com | 📱 +91- 9346129490 | 📍 Banglore, IN
                 </p>
-                <a href="https://github.com/Tkarthik123/portfolio/blob/main/T_Karthik_Resume.pdf" download class="cta-button" style="background: var(--gradient-accent);">
-                    📄 Download Resume
-                </a
+                <a href="https://raw.githubusercontent.com/Tkarthik123/portfolio/main/T_Karthik_Resume.pdf" download class="cta-button" style="background: var(--gradient-accent);">
+    📄 Download Resume
+</a>
             </div>
         </div>
     </section>
