--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
                 <p style="color: var(--text-secondary); margin-bottom: 20px;">
                     📧 tavatarikarthik035@gmail.com | 📱 +91- 9346129490 | 📍 Banglore, IN
                 </p>
-                <a href="https://raw.githubusercontent.com/Tkarthik123/portfolio/main/T_Karthik_Resume.pdf" download class="cta-button" style="background: var(--gradient-accent);">
+                <a href="T_Karthik_Resume.pdf" download class="cta-button" style="background: var(--gradient-accent);">
     📄 Download Resume
 </a>
             </div>
