--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
             font-size: 0.9rem;
         }
     </style>
+    <link rel="icon" type="image/png" href="profile.png">
 </head>
 <body>
     <div class="bg-animation"></div>
